# Tassathras

./: .gitignore  CMakeLists.txt  README.md
assets/: CMakeLists.txt
assets/shaders/: Base.glsl  fragment.glsl  quad.vert  vertex.glsl
src/Engine/: CMakeLists.txt
src/Engine/Core/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  Window.h
src/Engine/ECS/: Components.h
src/Engine/Graphics/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Engine/Graphics/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  VertexFormat.h
src/Engine/Graphics/renderers/: Renderer2D.cpp  Renderer2D.h
src/Game/: CMakeLists.txt  Game.cpp  Main.cpp
src/TreaxEngine/Core/: Application.cpp  Application.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/TreaxEngine/Graphics/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
