install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/animations"	DESTINATION "assets")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/characters"	DESTINATION "assets")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/data"			DESTINATION "assets")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/items"			DESTINATION "assets")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/maps"			DESTINATION "assets")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/shaders"		DESTINATION "assets")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/textures"		DESTINATION "assets")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/tiles"			DESTINATION "assets")